# converge-skill

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: validate.yml
compatible/: README.md
compatible/examples/research-route-skill/: README.md  SKILL.md  converge-compatible.json
converge/: __init__.py  cli.py  hosts.py
docs/: cli.md  evaluation.md  host-support.md  install.md  protocol.md  quickstart.md  release.md  v1-readiness.md
evidence/: README.md
evidence/response-eval/codex-headless-20260529/: README.md  RUNBOOK.md  manifest.tsv
evidence/response-eval/codex-headless-choice-20260529/: README.md  RUNBOOK.md  (+1 more)
gallery/: README.md  examples.json
intentbench/: README.md  manifest.json
protocol/examples/: converge-compatible-manifest.example.json  converge-run.example.json  eval-result.example.json  host-adapter-registry.example.json  host-capability.example.json  native-interaction-proof.example.json
protocol/schemas/: converge-compatible-manifest.schema.json  converge-run.schema.json  eval-result.schema.json  host-adapter-registry.schema.json  host-capability.schema.json  native-interaction-proof.schema.json
scripts/: check_converge_compatible.py  check_gallery_site.py  verify.py
site/: app.js  index.html  styles.css
skills/converge/: SKILL.md  dev-handoff-guide.md  eval-coverage.tsv  eval-rubric.md  examples.md  host-adapter-matrix.md  host-adapters.json  host-capability-contract.tsv  host-native-interaction-runbook.md  host-source-evidence.md  host-support-ledger.md  reference.md
(+167 files in other folders)
